tests/compile-fail/wrong-name.rs
use regex_tokenizer::tokenizer;

fn main() {
    tokenizer! {
        123
    }
}
